# HeavyTail

./: FunDefV36.py  README.md  simAnV30.py
HTPlayground/: FunDefV39_2.py  FunDefV39_2_minimize.py  GUI_revision_1.py  GUI_revision_2.py  HT_LITE_MAY21.py  HT_LITE_MAY24.py  HT_lite_Adam.py  Sil_t_DCMMeOH_496_50_0.csv  simAnV33_folder2log.py
HeavyTailFit/: HT_FitCode_v0_1.py  HT_Functions_v0_1.py  HeavyTail_0v1.py  HeavyTail_v0_1.py  June4a.csv  June4c.csv  June4d.csv  June4e.csv  June4f.csv  LICENSE.txt  TestData.csv  TestDataHeader.csv  _AFMMTJ_Neg_Switch_40.csv  eathquake.csv  setup.py
HeavyTailFit/FastPush/: FunDefV38demoDec.py  HT_FitCode_lite_1_.py  HT_Functions_lite_1.py  HT_simAn_lite_v1_.py
HeavyTailFit/June4a_2023-02-21_0/: June4aResult2023-02-21.csv
HeavyTailFit/June4a_2023-02-21_1/: June4aResult2023-02-21.csv
HeavyTailFit/June4bResult2023-02-14/: June4bResult2023-02-14.csv
HeavyTailFit/June4b_2023-02-21_0/: June4bResult2023-02-21.csv
HeavyTailFit/RawCode/: setup.py
HeavyTailFit/TestDataHeaderResult2023-02-14/: TestDataHeaderResult2023-02-14.csv
HeavyTailFit/TestDataResult2023-02-14/: TestDataResult2023-02-14.csv
HeavyTailFit/_AFMMTJ_Neg_Switch_40_2023-02-21_0/: _AFMMTJ_Neg_Switch_40Result2023-02-21.csv
HeavyTailFit/_AFMMTJ_Neg_Switch_40_2023-02-21_1/: _AFMMTJ_Neg_Switch_40Result2023-02-21.csv
HeavyTailFit/src/HT_Lite.egg-info/: PKG-INFO  (+3 more)
HeavyTailPip/: LICENSE.txt  README.md  manifest.in  setup.cfg  setup.py
HeavyTailPip/src/: Functions_0v1.py  helloworld.py
HeavyTailPip/src/canaygen_HTPackage.egg-info/: PKG-INFO  SOURCES.txt
(+6 files in other folders)
