[metadata]
name = canaygen-HTPackage
version = 0.1
author = Can
author_email = caygen@u.northwestern.edu
description = A packaged version of the HT_Code for academic use
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caygen/HeavyTail/HeavyTailPip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src